@@ -726,3 +726,6 @@
 2014-12-18 Fred Gleason <fredg@paravelsystems.com>
 	* Converted 'Added Programs' and 'Deleted Programs' report to use
 	spreadsheet rendering library.
+2014-12-19 Fred Gleason <fredg@paravelsystems.com>
+	* Converted 'Affidavit Contacts' report to use spreadsheet
+	rendering library.
